# districtapi-python

./: .gitignore  README.md  pyproject.toml
src/districtapi/: __init__.py  _async_client.py  _client.py  _exceptions.py  _http.py  _models.py
